Fri Mar  9 21:11:20 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:
        
          Changes to code generation specific to upgradeable components
          corresponding to changes in
          
          Tue Mar  6 20:21:45 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

Fri Mar  9 15:53:02 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp: Adjusted 3rd arg to
          ACE_CString for matching change in ACE from yesterday.

Fri Mar  9 14:09:19 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplication/RTConfig_Manager.{cpp,inl}:
          Fixed ownership problems with the policy list, fixes bugzilla 2743.
          Also moved destructor to cpp file

Thu Mar  8 01:27:19 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * docs/tutorials/Quoter/Simple/01.html:
        * docs/tutorials/Quoter/Simple/02.html:
        * docs/tutorials/Quoter/Simple/03.html:
        * docs/tutorials/Quoter/Simple/04.html:
        * docs/tutorials/Quoter/Simple/index.html:

          Added link to CIDLC compiler options.
          Added link to generate_component_mpc.pl options.
          Made it easier to navigate between tutorial pages.

Wed Mar  7 11:42:26 PST 2007  William R. Otte <wotte@dre.vanderbilt.edu>

        * NEWS:

          Updated to include some important changes in this release and
          plans for next release.


Wed Mar  7 02:20:26 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * docs/tutorials/CoSMIC:
        * docs/tutorials/CoSMIC/01.html:
        * docs/tutorials/CoSMIC/02.html:
        * docs/tutorials/CoSMIC/03.html:
        * docs/tutorials/CoSMIC/04.html:
        * docs/tutorials/CoSMIC/Icons:
        * docs/tutorials/CoSMIC/Icons/AddConnMode.gif:
        * docs/tutorials/CoSMIC/Icons/SetMode.gif:
        * docs/tutorials/CoSMIC/Images:
        * docs/tutorials/CoSMIC/Images/fig1.jpg: