@@ -1,10 +1,20 @@
+Sat Mar 10 01:11:40 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
+
+        * docs/tutorials/Quoter/Simple/01.html:
+        * docs/tutorials/Quoter/Simple/02.html:
+        * docs/tutorials/Quoter/Simple/03.html:
+        * docs/tutorials/Quoter/Simple/04.html:
+        * docs/tutorials/Quoter/Simple/index.html:
+
+          Added $Id$ to each file to fix fuzz errors.
+
 Fri Mar  9 21:11:20 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * CIDLC/ServantSourceGenerator.cpp:
-        
+
           Changes to code generation specific to upgradeable components
           corresponding to changes in
-          
+
           Tue Mar  6 20:21:45 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>
 
 Fri Mar  9 15:53:02 UTC 2007  Steve Huston  <shuston@riverace.com>
